tests/errors/E026.zen
int main() {
    return;       // E026: Non-void function must return a value
}